a cool analysis and satisfying visualization

--- a/scripts/R30_compositional_change.Rmd
+++ b/scripts/R30_compositional_change.Rmd
@@ -19,6 +19,13 @@ library(ggridges)
 library(vegan)
 library(ggrepel) # For better label placement
 library(RColorBrewer)
+library(ggpubr)
+library(brmstools)
+library(bayesplot)
+library(gt)
+library(ggtext)
+rstan::rstan_options(auto_write = TRUE)
+theme_set(theme_tidybayes() + panel_border())
 ```
 
 Model the magnitude of compositional disruption itself. This is done by using a beta-diversity metric (like Bray-Curtis distance) from each patient's baseline sample as a continuous outcome variable. 
@@ -396,13 +403,32 @@ summary(dist2)
 ```{r}
 asv_relab_97 <- read_csv('../data/171_quality_asv_relab_pident97_genus.csv')
 
-# --- 1. Aggregate ASVs to Genus Level ---
-# Sums up all ASVs belonging to the same genus within each sample.
-# It also filters out any ASVs that couldn't be assigned a genus (NA).
+# --- 1. Aggregate ASVs to Custom Genus/ASV Level ---
+# This is the new logic. It uses 'case_when' to re-classify ASVs *before*
+# the final summarization, splitting Enterococcus into two groups.
+
 genus_relab <- asv_relab_97 %>%
-  filter(!is.na(genus)) %>%
-  group_by(sampleid, genus) %>%
-  summarize(genus_relative = sum(count_relative, na.rm = TRUE), .groups = 'drop')
+  filter(!is.na(genus)) %>% # First, remove ASVs with no genus
+  mutate(
+    # Create a new grouping column
+    genus_group = case_when(
+      # ASV_1 is now 'Enterococcus_faecium'
+      asv_key == "asv_1" & genus == "Enterococcus" ~ "Enterococcus_faecium",
+      # Other Enterococcus ASVs are 'Enterococcus_other'
+      asv_key != "asv_1" & genus == "Enterococcus" ~ "Enterococcus_other",
+      # All other genera are kept as-is
+      TRUE ~ as.character(genus)
+    )
+  ) %>%
+  # Now, group by the *new* column and summarize
+  group_by(sampleid, genus_group) %>%
+  summarize(genus_relative = sum(count_relative, na.rm = TRUE), .groups = 'drop') %>%
+  # Rename back to 'genus' for compatibility with the rest of the script
+  rename(genus = genus_group)
+
+# --- Display a check ---
+print("--- Head of new custom-aggregated data ---")
+print(head(genus_relab, 10))
 
 # --- 2. Find the *single* most abundant genus for each sample ---
 # For each sample, this finds the row with the highest relative abundance.
@@ -526,7 +552,11 @@ plot_data <- pcoa_scores_with_ids %>%
 
 # Calculate the percent of variance explained by the first two axes
 variance_explained <- pcoa_results$values$Relative_eig[1:2] * 100
+```
 
+### PCoA
+
+```{r}
 # -----------------------------------------------------------------
 # --- 10. Create the (cleaner) PCoA Plot with Manual Colors ---
 # -----------------------------------------------------------------
@@ -539,30 +569,24 @@ all_plot_statuses <- plot_data %>%
   pull()
 
 # Define the "special" statuses that we want to color manually
-special_statuses <- c("Enterococcus", "Diverse/None", "Other")
+special_statuses <- c("Enterococcus_faecium", "Streptococcus", "Diverse/None", "Other")
 
 # Get the list of the *other* genera that need colors from a palette
 genera_to_color <- setdiff(all_plot_statuses, special_statuses)
 
-# Get the "Dark2" palette. It has 8 colors, which should be enough for the
-# 7 other top genera (10 total - 3 special).
-# 'n' must be at least 3 for brewer.pal
-n_colors_needed <- length(genera_to_color)
-palette_dark2 <- brewer.pal(n = max(3, n_colors_needed), name = "Dark2")
+contrasting_colors <- c('#0072B2','#D55E00','#E69F00','#56B4E9','#CC79A7','#F0E442','#332288')
 
-# Assign the first N colors from the palette to our N genera
-contrasting_colors <- palette_dark2[1:n_colors_needed]
 names(contrasting_colors) <- genera_to_color
 
 # Create the final named vector by combining the palette
 # with our manually specified colors.
 final_color_vector <- c(
   contrasting_colors,              # Colors for the other top genera
-  "Enterococcus" = "red",    # Manually set to Dark Green
-  "Diverse/None" = "#333333",    # Manually set to Black
-  "Other" = "#999999"            # Manually set to Medium Gray
+  "Enterococcus_faecium" = "#009E73",    # Dark Green
+  "Streptococcus"   = "#4F7942",    
+  "Diverse/None"         = "#000000",    # Black
+  "Other"                = "#999999"     # Medium Gray
 )
-
 
 # --- 10b. Generate the plot ---
 pcoa_plot <- ggplot(
@@ -576,24 +600,285 @@ pcoa_plot <- ggplot(
 ) +
   geom_point(size = 2, alpha = 0.7) +
   
+  # Add the dashed zero-lines
+  geom_hline(yintercept = 0, linetype = "dashed", color = "grey50") +
+  geom_vline(xintercept = 0, linetype = "dashed", color = "grey50") +
+  
   # Manually apply our new color scale
   scale_color_manual(
     values = final_color_vector,
-    name = "Domination Status (Top 10)" # Updated legend title
+    name = "Domination Status (Top 9)" # Updated legend title
   ) +
+    # --- Add Annotations ---
   
+  # Axis 2 - Right side annotations
+  # We use 'annotate' to place text and arrows in data coordinates
+  # We also use 'Inf' to place it at the edge of the plot
+  annotate("text", x = 0.55, y = 0.4, 
+           label = "Streptococcus-\nDominated", hjust = 0, size = 3.5)+
+  annotate("segment", x = 0.55, y = 0.1, xend = 0.55, yend = 0.35,
+           arrow = arrow(length = unit(0.2, "cm")), color = "black")+
+  
+  annotate("text", x = 0.55, y = -0.5, 
+           label = "Enterococcus faecium-\nDominated", hjust = 0, size = 3.5)+
+  annotate("segment", x = 0.55, y = -0.1, xend = 0.55, yend = -0.45,
+           arrow = arrow(length = unit(0.2, "cm")), color = "black")+
+           
+  # Axis 1 - Top side annotations
+  annotate("text", x = 0.35, y = 0.6, 
+           label = "Dysbiosis", vjust = 0, size = 3.5)+
+  annotate("segment", x = 0.1, y = 0.6, xend = 0.3, yend = 0.6,
+           arrow = arrow(length = unit(0.2, "cm")), color = "black")+
+           
+  annotate("text", x = -0.45, y = 0.6, 
+           label = "Healthy / Commensal-Dominated", vjust = 0, size = 3.5)+
+  annotate("segment", x = -0.1, y = 0.6, xend = -0.4, yend = 0.6,
+           arrow = arrow(length = unit(0.2, "cm")), color = "black") +
+           
+  # --- End Annotations ---
   # Add labels showing variance explained
   labs(
-    title = "Bray-Curtis PCoA (Genus Level) by Domination Status",
+    title = "Bray-Curtis PCoA (Genus Level) by Domination Status\n\n",
     x = sprintf("Axis 1 (%.2f%%)", variance_explained[1]),
     y = sprintf("Axis 2 (%.2f%%)", variance_explained[2])
   ) +
-  theme_bw() + # A clean, classic theme
-  # Center the plot title
-  theme(plot.title = element_text(hjust = 0.5)) + coord_fixed()
+  theme_bw() +
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    # 'clip = "off"' is ESSENTIAL for annotations outside the plot area
+    plot.margin = unit(c(1.5, 3.5, 0.5, 3.5), "cm"), # Give extra space on top/right/left
+    # Increase legend key size
+    legend.key.size = unit(0.5, "cm"),
+    legend.position = 'right'
+  ) +
+  # 'coord_fixed' ensures axes are 1:1, 'clip="off"' lets annotations show
+  coord_fixed(
+    ratio = 1, 
+    clip = "off"
+    )
 
 # Display the plot
 print(pcoa_plot)
-ggsave('../data/R30_pcoa_domination.pdf', width = 8, height = 8)
+ggsave('../data/R30_pcoa_domination.pdf', width = 9.5, height = 8)                                                 
 ```
 
+## axis 1 and 2 as the outcome
+
+```{r}
+meta <- read_csv('../data/153_combined_META.csv') 
+
+meta_Axis <- meta %>% 
+  mutate(intensity = factor(intensity, levels = c('nonablative','reduced','ablative'))) %>%
+  mutate(pid = factor(pid)) %>%
+    # This divides all the new intake columns by 100.
+  mutate(across(starts_with("fg_"), ~ .x / 100)) %>% 
+  inner_join(plot_data |> select(sampleid:Axis.2, domination_status, domination_status_limited)) %>% 
+  mutate(timebin = cut_width(sdrt, 7, boundary=0, closed = 'left')) 
+```
+
+### model 
+
+
+```{r}
+# --- 2. Define Model Components ---
+
+# Define the outcomes you want to test
+outcomes_to_run <- c("Axis.1", "Axis.2")
+
+# Get all food variable names from your data (matches screenshot)
+all_food_vars <- meta_Axis %>%
+  select(starts_with('fg_')) %>%
+  colnames()
+
+# Create the interaction terms automatically
+interaction_terms <- paste(all_food_vars, "empirical", sep = ":")
+
+# Define your priors. These are global and will be used in every model.
+priors <-
+  prior(normal(0, 1), class = 'b') + # General prior for all effects
+  # Specific priors that override the general one
+  prior(normal(0, 0.1), class = 'b', coef = "TPNTRUE") +
+  prior(normal(0, 0.1), class = 'b', coef = "ENTRUE") +
+  prior(normal(0, 0.5), class = 'b', coef = "empiricalTRUE")
+
+# --- 3. Run Models Efficiently using purrr::map ---
+
+# `map` will loop over your 'outcomes_to_run' vector
+# and run the code inside for each item (e.g., first "Axis.1", then "Axis.2")
+model_fits_list <- purrr::map(outcomes_to_run, ~ {
+  
+  # '.x' is the placeholder for the current outcome (e.g., "Axis.1")
+  current_outcome <- .x
+  
+  print(paste("--- Starting model for:", current_outcome, "---"))
+  
+  # Build the formula string dynamically
+  formula_string <- paste(
+    current_outcome, # Use the current outcome variable
+    "~ 0 + intensity + empirical + TPN + EN +",
+    paste(all_food_vars, collapse = " + "),       # Add main food effects
+    "+",
+    paste(interaction_terms, collapse = " + "), # Add interaction effects
+    "+ (1 | pid) + (1 | timebin)"
+  )
+  
+  # Convert the string to a formula object
+  formula <- brms::bf(as.formula(formula_string))
+  
+  # Fit the model
+  model_fit <- brm(
+    formula = formula,
+    data = meta_Axis,
+    prior = priors,
+    warmup = 1000, iter = 3000,
+    chains = 4, cores = 4,
+    seed = 123,
+    silent = 2,
+    control = list(adapt_delta = 0.99)
+  )
+  
+  print(paste("--- Finished model for:", current_outcome, "---"))
+  
+  # Return the fitted model
+  return(model_fit)
+})
+
+# Name the list for easy access later (e.g., model_fits_list$Axis.1)
+names(model_fits_list) <- outcomes_to_run
+
+
+# --- 4. Tidy and Combine All Results ---
+
+# Now, loop through the list of *fitted models* and tidy them,
+# combining them into a single, convenient data frame.
+# `map_dfr` means "map and combine into a dataframe"
+all_results <- purrr::map_dfr(model_fits_list, ~ {
+  
+  # Use broom.mixed::tidy to get a clean data frame
+  tidy(.x, conf.int = TRUE) %>%
+    mutate(conf.low = round(conf.low, 2),
+           conf.high = round(conf.high, 2))
+    
+}, .id = "outcome") # The .id argument adds a column
+                   # specifying which model the row came from
+
+# --- Display the final combined results ---
+print("--- Combined Model Results ---")
+print(as.data.frame(all_results))
+
+all_results |> write_csv('../data/R30_all_results_axis.csv')
+```
+### forest
+
+```{r}
+# the above figure but make it the way the other figure look like
+key <- read_csv('../data/food_group_color_key_final.csv', col_types = 'ccccc')
+
+replacement_dictionary <- setNames(key$shortname, key$fg1_name)
+
+level_order <- rev(c(
+    "abx", "EN", "TPN", 
+    "abx * Sweets", "Sweets",
+    "abx * Grains", "Grains",
+    "abx * Milk", "Milk",
+    "abx * Eggs", "Eggs",
+    "abx * Legumes", "Legumes",
+    "abx * Meats", "Meats",
+    "abx * Fruits", "Fruits",
+    "abx * Oils", "Oils",
+    "abx * Vegetables", "Vegetables"
+))
+
+
+# Define the new, descriptive labels
+new_facet_labels <- c(
+  "Axis.1" = "Axis 1: Healthy (left) vs. Dysbiosis (right)",
+  "Axis.2" = "Axis 2: E. faecium (bottom) vs. Strep. (top)"
+)
+
+cleaned_effects <- all_results %>%
+  # Keep only the fixed effects
+  filter(effect == "fixed") %>%
+  # Create a new column to distinguish main effects from interactions
+  mutate(
+    effect_type = if_else(str_detect(term, ":"), "Interaction", "Main Effect"),
+    # Create clean labels for plotting
+    clean_term = term %>%
+      str_replace("empiricalTRUE$", "abx") %>%
+      str_remove_all("empiricalFALSE:|avg_intake_|TRUE$") %>%
+      str_replace_all( replacement_dictionary) %>%
+      str_replace("empiricalTRUE:", "abx * ") %>%
+      str_replace_all("_", " ") 
+  ) %>%
+  filter(!str_detect(clean_term, 'intensity')) %>%
+  # Create a new column to identify significant results
+  # The condition is TRUE if conf.low and conf.high have the same sign (i.e., don't cross zero)
+  mutate(is_significant = (conf.low * conf.high) > 0,
+         outcome_label = recode(outcome, !!!new_facet_labels)) %>%
+  mutate(clean_term = factor(clean_term, levels = level_order))
+
+shading_df <- cleaned_effects %>%
+  mutate(y_numeric = as.numeric(clean_term)) %>%
+  filter(str_detect(clean_term, "\\*")) # Filter for interaction terms
+
+
+plot_axis <- ggplot(cleaned_effects, aes(x = estimate, y = clean_term)) +
+  geom_rect(
+    data = shading_df,
+    aes(ymin = y_numeric - 0.5, ymax = y_numeric + 0.5, xmin = -Inf, xmax = Inf),
+    fill = "#FBEADC", # A light orange/peach color like the example
+    alpha = 0.7,
+    inherit.aes = FALSE
+   ) +
+   # Add a vertical line at zero, which represents "no effect"
+  geom_vline(xintercept = 0, linetype = "solid", color = "blue",size = 0.8) +
+   # Use geom_pointrange to show the estimate (point) and confidence interval (line)
+   geom_pointrange(
+   aes(xmin = conf.low, xmax = conf.high, color = is_significant),
+     size = 0.25,linewidth = 1,
+  ) +
+  scale_color_manual(
+    values = c(
+      "TRUE" = "red",
+      "FALSE" = "black"
+    ), name = "Effect Status" # Legend title
+  ) +
+  scale_y_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
+  facet_wrap(~ outcome_label) +
+  # Add labels and a clean theme
+  labs(
+    x = "Predicted Shift in Axis Score",
+    title = "Predictors of Microbiome Compositional State",
+    y = ''
+  ) +
+  theme_classic(base_size = 11) +
+  theme(legend.position = "none", axis.text.y = element_markdown())
+
+plot_axis
+```
+
+### assemble
+
+```{r}
+final_plot <- plot_grid( pcoa_plot , 
+                         plot_axis ,
+                nrow  = 2,
+                labels = 'auto',
+                align = 'vh', axis = 'l')
+
+library(cowplot)
+title <- ggdraw() + 
+  draw_label("Rebuttal fig X",fontface = 'bold',x = 0,hjust = 0) +
+  theme(plot.margin = margin(0, 0, 0, 0))
+
+combined <- plot_grid(
+  title, final_plot,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.1, 1)
+) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
+
+ggsave('../data/R30_axis_model.pdf',
+      width = 8.5, height = 11, units = "in", device = 'pdf', plot = combined,
+      dpi = 300)    
+```
